added blog functionality and pages

--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -12,12 +12,12 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: serif;
-  color: #8019b3;
+  color: #8d49bc;
   margin: 1rem 0;
 }
 
 a {
-  color: #9053c7;
+  color: #8d49bc;
 }
 
 hr {
